--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
       <link rel="preconnect" href="https://fonts.googleapis.com/">
       <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9CN8NE17SY"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-9CN8NE17SY');
+	</script>
       <script>let id_game = '';
          let url_game = '';
          let slug_home = "chill-guy-clicker";
@@ -96,19 +104,7 @@
                               Hot Games 
                            </a>
                         </li>
-                        <li class="search-button">
-                           <a href="#search"><img width="32" height="32" src="themes/chill-guyclicker.github.io/rs/imgs/search-svgrepo-com.svg" alt="Hot Games" title="Hot Games" />Search</a>
-                           <div id="desktop-searchbox" class="header__bar--searchbox">
-                              <form action="https://chill-guyclicker.github.io/search" method="GET">
-                                 <input class="header__bar--searchbox-input" type="text" name="q" autocomplete="off" placeholder="Search" />
-                                 <button class="center-box header__bar--searchbox-submit" aria-label="Search">
-                                    <svg enable-background="new 0 0 32 32" id="Glyph" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                       <path d="M27.414,24.586l-5.077-5.077C23.386,17.928,24,16.035,24,14c0-5.514-4.486-10-10-10S4,8.486,4,14 s4.486,10,10,10c2.035,0,3.928-0.614,5.509-1.663l5.077,5.077c0.78,0.781,2.048,0.781,2.828,0 C28.195,26.633,28.195,25.367,27.414,24.586z M7,14c0-3.86,3.14-7,7-7s7,3.14,7,7s-3.14,7-7,7S7,17.86,7,14z" id="XMLID_223_" />
-                                    </svg>
-                                 </button>
-                              </form>
-                           </div>
-                        </li>
+                       
                      </ul>
                   </div>
                   <button class="center-box header__bar--open" aria-label="Open nav">
